--- a/index_en.html
+++ b/index_en.html
@@ -294,7 +294,7 @@
                     </nav>
                     <div class="col-lg-3 col-md-6 col-sm-12 footerItem">
                         <h5>Find us here:</h5><br>
-                        <h6>Reptéri Parkoló és Szerviz</h6>
+                        <h6>Airport Parking and Service</h6>
                         Ecser<br>
                         Eskü utca 4.<br>
                         2233<br>
